--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -58,14 +58,14 @@
   -if admin_user_signed_in?
     .dropdown
       .dropdown-toggle
-        {{filters.published || 'Publish Status'}}
+        {{filters.published_status}}
         %i.icon-angle-down
       %ul.dropdown-menu
-        %li(ng-repeat="choice in ['All', 'Published', 'Unpublished']")
+        %li(ng-repeat="choice in ['Published', 'Unpublished']")
           %a(ng-click="filters.published_status = choice")
             {{choice}}
   .dropdown
-    %div(ng-show="filters.difficulty || filters.by_published_at" ng-click="filters.clear = 'true'")
+    %div(ng-show="nonDefaultFilters()" ng-click="clearFilters()")
       = link_to 'Clear x', 'javascript:void(0);'
 
 %div.pull-left(galleryscroll='load_data()')
@@ -73,10 +73,10 @@
     %a(href= 'activities/{{activity.slug}}')
       .media-box-3-title
         {{activity.title}}
-      %div(ng-if="activityImageURL(activity, 400)")
-        %img(ng-src="{{activityImageURL(activity, 400)}}")
+      %img(ng-src="{{activityImageURL(activity, 400)}}")
       .media-box-3-footer
         .footer-left
           {{activity.difficulty}}
+
 .gallery-spinner(ng-show='spinner')
   %i.icon-spinner.icon-spin.icon-large
