--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -35,35 +35,35 @@
 /   %i.icon-spinner.icon-spin.icon-large
 
 .gallery-filter(ng-cloak='')
+
   .dropdown
-    = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
-      {{date_type || 'Date'}}
+    .dropdown-toggle
+      {{filters.by_published_at.name}}
       %i.icon-angle-down
     %ul.dropdown-menu
-      %li(ng-click="filters.by_published_at = 'desc' ; date_type = 'Most Recent'")
-        = link_to 'Most Recent', 'javascript:void(0);'
-      %li(ng-click="filters.by_published_at = 'asc' ; date_type = 'Oldest'")
-        = link_to 'Oldest', 'javascript:void(0);'
+      %li(ng-repeat="choice in publishedAtChoices")
+        %a(ng-click="filters.by_published_at = choice")
+          {{choice.name}}
+
   .dropdown
-    = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
-      {{filters.difficulty || 'Difficulty'}}
+    .dropdown-toggle
+      {{filters.difficulty.name || 'Difficulty'}}
       %i.icon-angle-down
     %ul.dropdown-menu
-      %li(ng-click="filters.difficulty = 'easy'")
-        = link_to 'Easy', 'javascript:void(0);'
-      %li(ng-click="filters.difficulty = 'intermediate'")
-        = link_to 'Intermediate', 'javascript:void(0);'
-      %li(ng-click="filters.difficulty = 'advanced'")
-        = link_to 'Advanced', 'javascript:void(0);'
+      %li(ng-repeat="choice in difficultyChoices")
+        %a(ng-click="filters.difficulty = choice")
+          {{choice.name}}
+
   -if admin_user_signed_in?
     .dropdown
       .dropdown-toggle
-        {{filters.published_status}}
+        {{filters.published_status.name}}
         %i.icon-angle-down
       %ul.dropdown-menu
-        %li(ng-repeat="choice in ['Published', 'Unpublished']")
+        %li(ng-repeat="choice in publishedStatusChoices")
           %a(ng-click="filters.published_status = choice")
-            {{choice}}
+            {{choice.name}}
+
   .dropdown
     %div(ng-show="nonDefaultFilters()" ng-click="clearFilters()")
       = link_to 'Clear x', 'javascript:void(0);'
