--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -14,11 +14,21 @@
             / - current_user.events.timeline.group_by{|e| [e.trackable.commentable || e.trackable.likeable || e.trackable, e.trackable_type, e.action] rescue true}.each do |event_group|
             /   = event_group
             /   %hr
-            - current_user.events.timeline.group_by{|e| e.group_name}.take(4).each do |group|
+            - current_user.events.timeline.group_by{|e| e.group_name}.each do |group|
               - group_type = group[0][0]
               - group_name = group[0][1]
               - group_events = group[1]
               - case group_type
+              - when ['Comment','create']
+                - media_object = group_events.first.trackable.commentable
+                .span3.text-center
+                  %h4 Comment
+                  %p= media_object.title
+                  = image_tag filepicker_gallery_image(media_object.image_id)
+                  %p= "#{group_events.first.trackable.user.name} said, '#{group_events.first.trackable.content}'"
+              - when ['Comment','received_create']
+              - when ['Course','enroll']
+              - when ['Like','create']
               - when ['Like','received_create']
                 - media_object = group_events.first.trackable.likeable
                 .span3.text-center
@@ -26,4 +36,4 @@
                   %p= media_object.title
                   = image_tag filepicker_gallery_image(media_object.image_id)
                   %p= "#{media_object.likes_count} people liked this."
-              %hr
+              - when ['Upload', 'create']
